--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.3.1
 dj-database-url==0.5.0
 Django==3.1.7
+django-environ==0.4.5
 gunicorn==20.1.0
+Pillow==8.2.0
+psycopg2-binary==2.8.6
 python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
